# aegis

./: .aider.conf.yml  .claude.md  .coverage  .gemini.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  OPERATIONS.md  README.md  REVIEW.md  SPEC.md  TEMP.md  _quick_diag.py  _test_correctness.py  _test_perf.py  _validate_deep.py  config.toml  mcp.json  opencode.json  pyproject.toml
.aegis/: AEGIS.md  baseline.json  config.yaml  evolution_log.json  rules.yaml  session.json  telemetry.json
.aegis/plugins/: cloud_isolation.py  custom_analyzer.py  dead_module_detector.py  deprecation_oracle.py  example_import_guard.py  import_guard.py  internal_privacy.py
.aegis/rules/: .packs.json  architecture.yaml  custom.yaml
.aegis/rules/architecture/: pack.yaml  rules.yaml
.aegis/rules/best-practices/: pack.yaml  rules.yaml
.aegis/rules/custom/: rules.yaml
.aegis/rules/dependencies/: pack.yaml  rules.yaml
.aegis/rules/design/: rules.yaml
.aegis/rules/documentation/: rules.yaml
.aegis/rules/general/: rules.yaml
.aegis/rules/go/: pack.yaml  rules.yaml
.aegis/rules/infrastructure/: pack.yaml  rules.yaml
.aegis/rules/javascript-typescript/: rules.yaml
.aegis/rules/performance/: pack.yaml  rules.yaml
.aegis/rules/rust/: pack.yaml  rules.yaml
.aegis/rules/security/: pack.yaml  rules.yaml
.aegis/rules/semantic/: rules.yaml
.aegis/rules/structure/: rules.yaml
.aegis/rules/style/: pack.yaml  rules.yaml
.aegis/rules/testing/: rules.yaml
.aegis/skills/: aegis-architect.md  aegis-init.md  aegis-lead.md  aegis-principal-architect.md  aegis-semantic-check.md
.claude/: settings.local.json
.claude/skills/: aegis-architect.md  aegis-edit.md  aegis-evaluate.md  aegis-init.md  aegis-rule-add.md  aegis-rule-modify.md  aegis-update.md
.github/actions/aegis-ci/: action.yml
.github/workflows/: aegis-governance.yml
docs/: ARCHITECTURE.md  REVIEW.md  SPEC.md  STRATEGIC_REVIEW.md  STRATEGIC_VISION_V3.md  v3_ARCHITECTURAL_SANDBOX.md  v3_ARCHITECTURAL_SANDBOX_DETAILED.md
docs/adr/: 001-microkernel-architecture.md  002-evaluation-engine-pipeline.md  003-universal-harness-abstraction.md  004-cross-agent-session-state.md  005-composable-rule-packs.md  006-observability-telemetry.md
docs/superpowers/plans/: 2026-05-23-aegis-v4-implementation.md  2026-05-27-aegis-architect-on-demand.md  2026-05-27-aegis-coordination-alignment.md  2026-05-27-aegis-universal-harness-semantic.md  2026-05-28-aegis-proactive-healing.md
docs/superpowers/specs/: 2026-05-23-aegis-v4-agent-native-design.md
scratch/: danger_file.py  debug_plugin.txt  dummy_service.py  evil_file.py  plugin_test.py  plugin_test.txt  plugin_test2.txt  plugin_test3.txt  plugin_test4.txt  plugin_test5.txt  plugin_test6.txt  plugin_test7.txt  plugin_test8.txt  plugin_test9.txt  plugin_test_output.txt  query_service.py  semantic_test_output.txt  tree_sitter_test.py  ts_output.txt
src/aegis/: leak.py
src/aegis/cli/: main.py
src/aegis/core/: constants.py
src/aegis/infrastructure/: ast_analyzer.py  file_watcher.py  git_provider.py  graph_analyzer.py  installer.py  regex_analyzer.py  remediation_strategies.py  (+1 more)
tests/: conftest.py  test_adapters.py  test_advanced_plugin_system.py  test_agent_coordination.py  test_agent_native.py  test_aider_harness.py  test_ambient_awareness.py  test_ast_analyzer.py  test_baseline.py  test_claude_harness.py  test_cli.py  test_config_model.py  test_container.py  test_core_semantic_loop.py  test_discovery.py  test_edge_cases.py  test_errors.py  test_evaluation_routing.py  test_evaluation_service.py  test_evolution_service.py  test_file_watcher.py  test_fixer.py  test_gemini_harness.py  test_git_provider.py  test_governance_service.py  test_graph_analyzer.py  test_graph_cache.py  test_harness_architecture.py  test_installer.py  test_integration.py  test_integration_scenarios.py  test_kernel.py  test_mcp_dependency_graph.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_tools.py  test_mcp_transport.py  test_phase_filtering.py  test_plugin_cloud_isolation.py  test_plugin_deprecation_oracle.py  (+20 more)
tests/e2e/: test_agent_coordination.py  test_agent_native.py  test_edge_cases.py
tests/integration/: test_ambient_awareness.py  test_cli.py  test_integration.py  test_integration_scenarios.py  test_mcp_tools.py  test_plugin_mcp_integration.py  test_scaffolding_alignment.py
(+111 files in other folders)
