[project]
name = "aegis"
version = "0.1.0"
description = "An enterprise-grade, agentic architectural governance engine."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [{ name = "Aegis Team", email = "hello@aegis-governance.org" }]
keywords = ["architecture", "governance", "agentic", "mcp", "tree-sitter", "refactoring", "copyleft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=0.1.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "gitpython>=3.1.43",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-rust>=0.24.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
aegis = "aegis.cli.main:AegisCLI.entry_point"
aegis-kernel = "aegis.kernel.server:AegisKernel.entry_point"
aegis-install = "aegis.infrastructure.installer:AegisInstaller.entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PT",  # flake8-pytest-style
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
